--- a/frontend_vue/public/index.html
+++ b/frontend_vue/public/index.html
@@ -8,7 +8,7 @@
     <!--<title><%= htmlWebpackPlugin.options.title %></title>-->
     <title>Inicio</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;669;700;800;900&display=swap">
   </head>
   <body>
