--- a/frontend_vue/public/index.html
+++ b/frontend_vue/public/index.html
@@ -1,46 +1,57 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
-	<title>Inicio</title>
-	<!-- <title>Inicio</title> -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-	<link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;669;700;800;900&display=swap">
-  </head>
-  <body>
-	<noscript>
-	  <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-	</noscript>
-	<div id="app"></div>
-	<!-- built files will be auto injected -->
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width,initial-scale=1.0">
+		<link rel="icon" href="<%= BASE_URL %>favicon.ico">
+		<title>Inicio</title>
+		<!-- <title>Inicio</title> -->
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+		<link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;669;700;800;900&display=swap">
+	</head>
+	<body>
+		<noscript>
+		<strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+		</noscript>
+		<div id="app"></div>
+		<!-- built files will be auto injected -->
+		
+		
+		<!-- The core Firebase JS SDK is always required and must be listed first -->
+		<script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-app.js"></script>
+
+		<!-- TODO: Add SDKs for Firebase products that you want to use
+			https://firebase.google.com/docs/web/setup#available-libraries -->
+
+		<script>
+		// Your web app's Firebase configuration
+		var firebaseConfig = {
+			apiKey: "AIzaSyAV33FlhDRJGsH83oqDdhpxpo2bC1scXNE",
+			authDomain: "me310-sugar.firebaseapp.com",
+			databaseURL: "https://me310-sugar.firebaseio.com",
+			projectId: "me310-sugar",
+			storageBucket: "me310-sugar.appspot.com",
+			messagingSenderId: "1004615747365",
+			appId: "1:1004615747365:web:de1375120b7698a0fe7ccc"
+		};
+		// Initialize Firebase
+		firebase.initializeApp(firebaseConfig);
+
+		// Referencia a la Base de Datos
+		//var db = firebase.database();
+		</script>
+		
 	
-	
-	<!-- The core Firebase JS SDK is always required and must be listed first -->
-	<script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-app.js"></script>
-
-	<!-- TODO: Add SDKs for Firebase products that you want to use
-		https://firebase.google.com/docs/web/setup#available-libraries -->
-
-	<script>
-	  // Your web app's Firebase configuration
-	  var firebaseConfig = {
-		apiKey: "AIzaSyAV33FlhDRJGsH83oqDdhpxpo2bC1scXNE",
-		authDomain: "me310-sugar.firebaseapp.com",
-		databaseURL: "https://me310-sugar.firebaseio.com",
-		projectId: "me310-sugar",
-		storageBucket: "me310-sugar.appspot.com",
-		messagingSenderId: "1004615747365",
-		appId: "1:1004615747365:web:de1375120b7698a0fe7ccc"
-	  };
-	  // Initialize Firebase
-	  firebase.initializeApp(firebaseConfig);
-
-	  // Referencia a la Base de Datos
-	  //var db = firebase.database();
-	</script>
-  </body>
+		<script
+			src="https://cdn.jsdelivr.net/gh/mishushakov/df-btn@latest/df-btn.min.js"
+			id="df-btn"
+			project='me310-sugar'
+			width="400px"
+			height="490px"
+			openText="Habla con Ally"
+			closeText="Cerrar">
+		</script>
+	</body>
 </html>
