reproductor video and recursive function

--- a/frontend_vue/public/index.html
+++ b/frontend_vue/public/index.html
@@ -24,26 +24,8 @@
 
 		<!-- TODO: Add SDKs for Firebase products that you want to use
 			https://firebase.google.com/docs/web/setup#available-libraries -->
-
-		<script>
-		// Your web app's Firebase configuration
-		var firebaseConfig = {
-			apiKey: "AIzaSyAV33FlhDRJGsH83oqDdhpxpo2bC1scXNE",
-			authDomain: "me310-sugar.firebaseapp.com",
-			databaseURL: "https://me310-sugar.firebaseio.com",
-			projectId: "me310-sugar",
-			storageBucket: "me310-sugar.appspot.com",
-			messagingSenderId: "1004615747365",
-			appId: "1:1004615747365:web:de1375120b7698a0fe7ccc"
-		};
-		// Initialize Firebase
-		firebase.initializeApp(firebaseConfig);
-
-		// Referencia a la Base de Datos
-		//var db = firebase.database();
-		</script>
 		
-		<script type="text/javascript">
+		<!-- <script type="text/javascript">
 			/* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
 			(function(d, m){
 			  var kommunicateSettings = {"appId":"3b14955bf6e5e6fb27a85f9d8a33b0586","popupWidget":true,"automaticChatOpenOnNavigation":true};
@@ -52,7 +34,7 @@
 			  var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
 			  window.kommunicate = m; m._globals = kommunicateSettings;
 			})(document, window.kommunicate || {});
-		</script>
+		</script> -->
 
 
 		<!-- <script
