--- a/frontend_vue/public/index.html
+++ b/frontend_vue/public/index.html
@@ -6,9 +6,9 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico">
 		<title>Inicio</title>
-		<!-- <title>Inicio</title> -->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
 		<link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;669;700;800;900&display=swap">
 	</head>
 	<body>
@@ -18,13 +18,7 @@
 		<div id="app"></div>
 		<!-- built files will be auto injected -->
 		
-		
-		<!-- The core Firebase JS SDK is always required and must be listed first -->
-		<script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-app.js"></script>
 
-		<!-- TODO: Add SDKs for Firebase products that you want to use
-			https://firebase.google.com/docs/web/setup#available-libraries -->
-		
 		<!-- <script type="text/javascript">
 			/* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
 			(function(d, m){
@@ -46,5 +40,6 @@
 			openText="Habla con Ally"
 			closeText="Cerrar">
 		</script> -->
+
 	</body>
 </html>
