active Ally Chat

--- a/frontend_vue/public/index.html
+++ b/frontend_vue/public/index.html
@@ -19,7 +19,7 @@
 		<!-- built files will be auto injected -->
 		
 
-		<!-- <script type="text/javascript">
+		<script type="text/javascript">
 			/* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
 			(function(d, m){
 			  var kommunicateSettings = {"appId":"3b14955bf6e5e6fb27a85f9d8a33b0586","popupWidget":true,"automaticChatOpenOnNavigation":true};
@@ -28,7 +28,7 @@
 			  var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
 			  window.kommunicate = m; m._globals = kommunicateSettings;
 			})(document, window.kommunicate || {});
-		</script> -->
+		</script>
 
 
 		<!-- <script
